manifests/helm/cloudnative-pg.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cnpg-system
